<?xml version="1.0"?>
<package format="2">
  <name>joy_overlay_tools</name>
  <version>0.1.0</version>
  <description>Overlay visualizer and virtual joy GUI tools for ROS1 sensor_msgs/Joy.</description>

  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-pyqt5</exec_depend>
</package>
